--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
-flask
-pandas
-matplotlib
-seaborn
-textblob
-transformers
-langchain
-langchain-core
-langchain-community
-langchain-ollama
-sentence-transformers
-chromadb
-google-api-python-client
+flask>=2.0.0
+pandas>=1.3.0
+matplotlib>=3.4.0
+seaborn>=0.11.0
+textblob>=0.15.3
+transformers>=4.0.0
+langchain>=0.1.0
+langchain-core>=0.1.0
+langchain-community>=0.0.10
+langchain-ollama>=0.0.1
+langchain-huggingface>=0.0.2
+sentence-transformers>=2.2.0
+pydantic>=2.0.0
+chromadb>=0.4.0
+google-api-python-client>=2.0.0
